Fix side image not showing

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
 
 .side-image {
     flex: 1 1 0;
-    background-image: url(/assets/bg.png);
+    background-image: url("./assets/bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     min-width: max(30vw, 300px);
